# TOOL

./: .gitignore  CMakeLists.txt  LICENSE  TOOL.vcxproj  build.bat  build.sh  configure.bat  configure.sh  debug.bat  dev.bat  package.bat  project.4coder  run.bat  test.sh
Int/TOOL-x64-Debug/TOOL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  TOOL.lastbuildstate
Output/TOOL/include/TOOL/: Basics.h  TOOL.h  Vector.h
Source/: Basics.cpp  Basics.h  Box.h  Color.h  Entry.cpp  Exception.cpp  Exception.h  Intrinsics.h  Math.cpp  Math.h  Mathematics.cpp  Mathematics.h  Matrix.h  Memory.cpp  Memory.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  String.h  TOOL.h  Variadic.cpp  Variadic.h  Vector.h
Source/Superheader/: TOOL.h
Source/Test/: Session.rdbg  Test.cpp
archive/msvc/: TOOL.vcxproj  Test.vcxproj  build_msvc.bat
include/: tool.h
include/tool/: basics.h  box.h  color.h  exception.h  intrinsics.h  io.h  linking.h  mathematics.h  matrix.h  memory.h  quaternion.h  random.h  temporal.h  text.h  threading.h  utility.h  variadic.h  vector.h
package/TOOL/include/: tool.h
package/TOOL/include/tool/: exception.h  intrinsics.h  io.h  linking.h  mathematics.h  matrix.h  memory.h  random.h  temporal.h  text.h  threading.h  variadic.h
source/: basics.cpp  entry.cpp  exception.cpp  io.cpp  linking.cpp  mathematics.cpp  memory.cpp  quaternion.cpp  temporal.cpp  text.cpp  threading.cpp
source/test/: test.cpp  test.h  testlib.cpp  testmodule.cpp
